--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ body {
 }
 
 .box {
-    min-height: 400px;
+    min-height: 350px;
     padding: 30px;
     box-shadow: var(--main-shdow);
     border-radius: 15px;
@@ -1726,3 +1726,125 @@ display: none;
 /*#####################################################################
 ######################### End Backup Manger  #######################
 #######################################################################*/
+
+/***********************************************************************
+************************************************************************
+************************ Start Profile Page *******************************
+**************************************************************************
+**************************************************************************/
+
+/*#####################################################################
+######################### Start kkkkkkkkk  #######################
+#######################################################################*/
+
+
+/*#####################################################################
+######################### End kkkkkkkkkk  #######################
+#######################################################################*/
+
+/***********************************************************************
+************************************************************************
+************************ Start Projects Page *******************************
+**************************************************************************
+**************************************************************************/
+.box h4 {
+justify-content: space-between;
+}
+.box h4 span {
+    font-size: 12px;
+    color: #777;
+}
+.projects-box-img {
+    justify-content: flex-start;
+    margin: 40px 0;
+    border-bottom: 1px solid #eee;
+    padding-bottom: 30px;
+}
+.projects-box-img img{
+    width: 40px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border: 2px solid var(--white-color);
+}
+.projects-box-img img:hover {
+    z-index: 999;
+    cursor: pointer;
+}
+.projects-box-img img:not(:first-of-type) {
+    margin-left: -15px;
+}
+.projects-info {
+    justify-content: flex-end;
+    border-bottom:1px solid #eee ;
+    padding-bottom: 10px;
+}
+.projects-info span {
+    padding: 4px;
+    font-size: small;
+    background-color: #eee;
+    margin-left: 5px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    margin: 5px;
+}
+.projects-progres {
+    justify-content: space-between;
+    padding: 20px 0 0 0 ;
+}
+.prog-span {
+    position: relative;
+    width: 50%;
+    height: 8px;
+    background-color: #eee;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+.prog-span span{
+    position: absolute;
+    background-color: var(--green-color);
+    top: 0;
+    left: 0;
+    height: 100%;
+    border-radius: inherit;
+    -webkit-border-radius: inherit;
+    -moz-border-radius: inherit;
+    -ms-border-radius: inherit;
+    -o-border-radius: inherit;
+}
+
+.box:nth-of-type(1) .prog-span span,
+ .box:nth-of-type(6) .prog-span span{
+    background-color: var(--red-color);
+}
+.box:nth-of-type(3) .prog-span span {
+background-color: var(--blue-color);
+}
+
+@media (max-width:767px) {
+    .projects-info {
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+    .projects-progres {
+        flex-direction: column;
+    }
+}
+
+/***********************************************************************
+************************************************************************
+************************ Start Courses Page *******************************
+**************************************************************************
+**************************************************************************/
+
+
+
